--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.2.3",
@@ -28,6 +28,7 @@
     "firebase": "^12.1.0",
     "gh-pages": "^6.1.1",
     "lucide-react": "^0.424.0",
+    "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
