--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.1.0",
     "gh-pages": "^6.1.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.424.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
